--- a/css/styles.css
+++ b/css/styles.css
@@ -255,3 +255,11 @@ button:disabled {
         grid-template-columns: 1fr;
     }
 }
+
+.version {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 0.75em;
+    margin-top: 30px;
+    padding: 10px;
+}
